Added a PostActivity so the user can create a "post" and select a new image from their folder of choice by clicking on the ImageView (pic quality is hilarious).  Next step is uploading picture, and text from both EditText views to firebase.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,8 +9,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/addIcon"
+        android:id="@+id/add_icon"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/addIcon"
+        android:icon="@drawable/add_icon"
         android:title="@string/add_event" />
 </menu>
