--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -20,7 +20,7 @@
 
     <EditText
         android:background="@drawable/edit_shape"
-        android:id="@+id/cardPicker"
+        android:id="@+id/edit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_name"
@@ -30,7 +30,7 @@
         android:layout_marginRight="10dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/enter_desc"
         android:background="@drawable/edit_shape"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
