--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -10,11 +10,14 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="214dp"
-        android:layout_height="256dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
-        android:background="@drawable/looks"
         android:scaleType="fitXY"
         android:onClick="imageButtonClicked"/>
 
@@ -36,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:hint="@string/enter_description"
         android:padding="10dp" />
 
